--- a/.github/workflows/third-party.yml
+++ b/.github/workflows/third-party.yml
@@ -139,6 +139,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         path: pydantic-latest
+        ref: 'v2.10.4'
     - uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
