--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,10 +68,14 @@ jobs:
           - '3.11'
           - '3.12'
           - '3.13'
+          - '3.13t'
           - 'pypy3.9'
           - 'pypy3.10'
 
     runs-on: ubuntu-latest
+
+    # TODO: get test suite stable with free-threaded python
+    continue-on-error: ${{ endsWith(matrix.python-version, 't') }}
 
     steps:
       - uses: actions/checkout@v4
@@ -101,6 +105,11 @@ jobs:
       - run: uv run pytest
         env:
           HYPOTHESIS_PROFILE: slow
+          # TODO: remove -x when test suite is more stable; we use it so that first error (hopefully) gets
+          # reported without the interpreter crashing
+          PYTEST_ADDOPTS: ${{ endsWith(matrix.python-version, 't') && '--parallel-threads=2 -x' || '' }}
+          # TODO: add `gil_used = false` to the PyO3 `#[pymodule]` when test suite is ok
+          PYTHON_GIL: ${{ endsWith(matrix.python-version, 't') && '0' || '1' }}
 
   test-os:
     name: test on ${{ matrix.os }}
