--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,6 +98,9 @@ docs = [
     'pydantic-extra-types==2.10',
     'requests',
 ]
+docs-upload = [
+    "algoliasearch>=4.12.0",
+]
 linting = [
     'eval-type-backport',
     'ruff',
