--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
     'annotated-types>=0.6.0',
     # Keep this in sync with the version in the `check_pydantic_core_version()` function:
     'pydantic-core==2.30.0',
+    'typing-inspection>=0.4.0',
 ]
 dynamic = ['version', 'readme']
 
