--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -315,10 +315,12 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: install rust nightly
-        uses: dtolnay/rust-toolchain@nightly
+        uses: dtolnay/rust-toolchain@master
         with:
           components: rust-src
           targets: wasm32-unknown-emscripten
+          # might be able to unpin when pydodide uses emscripten 4, see below
+          toolchain: nightly-2025-02-17
 
       - name: cache rust
         uses: Swatinem/rust-cache@v2
