--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ dependencies = [
     'typing-extensions>=4.12.2',
     'annotated-types>=0.6.0',
     # Keep this in sync with the version in the `check_pydantic_core_version()` function:
-    'pydantic-core @ git+https://github.com/pydantic/pydantic-core.git@new-alias-api',
+    'pydantic-core==2.29.0',
 ]
 dynamic = ['version', 'readme']
 
