--- a/.github/workflows/docs-update.yml
+++ b/.github/workflows/docs-update.yml
@@ -93,9 +93,9 @@ jobs:
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
 
       - run: uv run mike deploy -b docs-site dev --push
-        if: "github.ref == 'refs/heads/main'"
+        if: github.ref == 'refs/heads/main'
 
-      - if: "github.ref == 'refs/heads/docs-update' || startsWith(github.ref, 'refs/tags/')"
+      - if: github.ref == 'refs/heads/docs-update' || startsWith(github.ref, 'refs/tags/')
         id: check-version
         uses: samuelcolvin/check-python-version@v4.1
         with:
@@ -103,7 +103,7 @@ jobs:
           skip_env_check: true
 
       - run: uv run mike deploy -b docs-site ${{ steps.check-version.outputs.VERSION_MAJOR_MINOR }} latest --update-aliases --push
-        if: "(github.ref == 'refs/heads/docs-update' || startsWith(github.ref, 'refs/tags/')) && !fromJSON(steps.check-version.outputs.IS_PRERELEASE)"
+        if: (github.ref == 'refs/heads/docs-update' || startsWith(github.ref, 'refs/tags/')) && ${{ !fromJSON(steps.check-version.outputs.IS_PRERELEASE) }}
         env:
           PYDANTIC_VERSION: v${{ steps.check-version.outputs.VERSION }}
 
