--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -422,7 +422,7 @@ jobs:
           - os: linux
             manylinux: auto
             target: x86_64
-            interpreter: pypy3.9 pypy3.10
+            interpreter: pypy3.9 pypy3.10 pypy3.11
 
           # musllinux
           - os: linux
@@ -442,7 +442,7 @@ jobs:
             target: x86_64
           - os: macos
             target: aarch64
-            interpreter: 3.9 pypy3.9 pypy3.10
+            interpreter: 3.9 pypy3.9 pypy3.10 pypy3.11
 
           # windows;
           # x86_64 pypy builds are not PGO optimized
@@ -450,7 +450,7 @@ jobs:
           # aarch64 only 3.11 and up, also not PGO optimized
           - os: windows
             target: x86_64
-            interpreter: pypy3.9 pypy3.10
+            interpreter: pypy3.9 pypy3.10 pypy3.11
           - os: windows
             target: i686
             python-architecture: x86
@@ -484,7 +484,7 @@ jobs:
         with:
           target: ${{ matrix.target }}
           manylinux: ${{ matrix.manylinux }}
-          args: --release --out dist --interpreter ${{ matrix.interpreter || '3.9 3.10 3.11 3.12 3.13 pypy3.9 pypy3.10' }}
+          args: --release --out dist --interpreter ${{ matrix.interpreter || '3.9 3.10 3.11 3.12 3.13 pypy3.9 pypy3.10 pypy3.11' }}
           rust-toolchain: stable
           docker-options: -e CI
 
