add always condition to make sure issues are opened

--- a/.github/workflows/third-party.yml
+++ b/.github/workflows/third-party.yml
@@ -577,6 +577,7 @@ jobs:
       - test-semantic-kernel
       - test-langchain
     if: |
+      always() &&
       github.repository == 'pydantic/pydantic' &&
       github.event_name == 'schedule' &&
       (
