--- a/.github/workflows/third-party.yml
+++ b/.github/workflows/third-party.yml
@@ -309,6 +309,9 @@ jobs:
       github.event_name == 'workflow_dispatch' ||
       (github.event_name == 'schedule' && github.repository == 'pydantic/pydantic') ||
       (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'third-party-tests'))
+    env:
+      POLAR_ENV: testing
+      POLAR_EMAIL_RENDERER_BINARY_PATH: ${{ github.workspace }}/server/emails/bin/react-email-pkg
 
     runs-on: ubuntu-latest
     strategy:
@@ -364,6 +367,21 @@ jobs:
         POLICY_FILE: policy.json
       run:  bash github.sh
 
+    - uses: pnpm/action-setup@v4
+      with:
+        version: 9.15.0
+
+    - name: 📬 Setup Node.js environment for server/emails
+      uses: actions/setup-node@v4
+      with:
+        node-version-file: server/emails/.node-version
+        cache: "pnpm"
+        cache-dependency-path: "clients/pnpm-lock.yaml"
+
+    - name: 📬 Build server/emails
+      working-directory: server/emails
+      run: pnpm install --frozen-lockfile && pnpm build
+
     - name: Checkout Pydantic
       uses: actions/checkout@v4
       with:
@@ -391,14 +409,10 @@ jobs:
 
     - name: ⚗️ alembic migrate
       working-directory: ./server
-      env:
-        POLAR_ENV: testing
       run: uv run task db_migrate
 
     - name: ⚗️ alembic check
       working-directory: ./server
-      env:
-        POLAR_ENV: testing
       run: uv run alembic check
 
     - name: 🐍 Run polar tests (pytest)
@@ -563,6 +577,7 @@ jobs:
       - test-semantic-kernel
       - test-langchain
     if: |
+      always() &&
       github.repository == 'pydantic/pydantic' &&
       github.event_name == 'schedule' &&
       (
