--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-13, macos-latest, windows-latest]
-        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
+        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13', '3.13t']
         include:
           # no pydantic-core binaries for pypy on windows, so tests take absolute ages
           # macos tests with pypy take ages (>10mins) since pypy is very slow
@@ -136,7 +136,7 @@ jobs:
     - name: Test without email-validator
       # speed up by skipping this step on pypy
       if: ${{ !startsWith(matrix.python-version, 'pypy') }}
-      run: make test
+      run: make test NUM_THREADS=${{ endsWith(matrix.python-version, 't') && '4' || '1' }}
       env:
         COVERAGE_FILE: coverage/.coverage.${{ runner.os }}-py${{ matrix.python-version }}-without-deps
         CONTEXT: ${{ runner.os }}-py${{ matrix.python-version }}-without-deps
@@ -145,7 +145,7 @@ jobs:
       run: uv sync --group testing-extra --all-extras
 
     - name: Test with all extra dependencies
-      run: make test
+      run: make test NUM_THREADS=${{ endsWith(matrix.python-version, 't') && '4' || '1' }}
       env:
         COVERAGE_FILE: coverage/.coverage.${{ runner.os }}-py${{ matrix.python-version }}-with-deps
         CONTEXT: ${{ runner.os }}-py${{ matrix.python-version }}-with-deps
