--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,10 +142,13 @@ jobs:
         CONTEXT: ${{ runner.os }}-py${{ matrix.python-version }}-without-deps
 
     - name: Install extra dependencies
+      # Skip free threaded, we can't install memray
+      if: ${{ !endsWith(matrix.python-version, 't') }}
       run: uv sync --group testing-extra --all-extras
 
     - name: Test with all extra dependencies
-      run: make test NUM_THREADS=${{ endsWith(matrix.python-version, 't') && '4' || '1' }}
+      if: ${{ !endsWith(matrix.python-version, 't') }}
+      run: make test
       env:
         COVERAGE_FILE: coverage/.coverage.${{ runner.os }}-py${{ matrix.python-version }}-with-deps
         CONTEXT: ${{ runner.os }}-py${{ matrix.python-version }}-with-deps
