--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,6 +137,8 @@ jobs:
       # speed up by skipping this step on pypy
       if: ${{ !startsWith(matrix.python-version, 'pypy') }}
       run: make test NUM_THREADS=${{ endsWith(matrix.python-version, 't') && '4' || '1' }}
+      # Free threaded is flaky, allow failures for now:
+      continue-on-error: ${{ endsWith(matrix.python-version, 't') }}
       env:
         COVERAGE_FILE: coverage/.coverage.${{ runner.os }}-py${{ matrix.python-version }}-without-deps
         CONTEXT: ${{ runner.os }}-py${{ matrix.python-version }}-without-deps
