Add integration documentation for llms.txt

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -171,6 +171,7 @@ nav:
   - Usage Errors: errors/usage_errors.md
 - Integrations:
   - Pydantic Logfire: integrations/logfire.md
+  - LLMs: integrations/llms.md
   - Dev Tools:
     - Mypy: integrations/mypy.md/.
     - PyCharm: integrations/pycharm.md
