--- a/.github/workflows/third-party.yml
+++ b/.github/workflows/third-party.yml
@@ -207,7 +207,7 @@ jobs:
         TASKIPY: true
 
   test-pandera:
-    name: Test pandera (main branch) on Python ${{ matrix.python-version }}
+    name: Test Pandera (main branch) on Python ${{ matrix.python-version }}
     # If 'schedule' was the trigger, don't run it on contributors' forks
     if: |
       github.event_name == 'workflow_dispatch' ||
@@ -218,9 +218,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9', '3.10', '3.11']
+        python-version: ['3.9', '3.10', '3.11', '3.12']
     steps:
-    - name: Checkout pandera
+    - name: Checkout Pandera
       uses: actions/checkout@v4
       with:
         repository: unionai-oss/pandera
@@ -235,20 +235,20 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install pandera dependencies
+    - name: Install Pandera dependencies
       run: |
         pip install uv
-        uv pip install --system -r requirements.in
+        uv sync --extra pandas --extra fastapi --extra pandas --group dev --group testing --group docs
         uv pip uninstall --system pydantic pydantic-core
         uv pip install --system -e ./pydantic-latest
 
     - name: List installed dependencies
       run: uv pip list
 
-    - name: Run pandera tests
+    - name: Run Pandera tests
       # Pandera's CI uses nox sessions which encapsulate the logic to install a specific Pydantic version.
-      # Instead, manually run pytest (we run core and FastAPI tests):
-      run: pytest tests/core tests/fastapi
+      # Instead, manually run pytest (we run core, pandas and FastAPI tests):
+      run: uv run pytest tests/base tests/pandas tests/fastapi
 
   test-odmantic:
     name: Test ODMantic (main branch) on Python ${{ matrix.python-version }}
