--- a/.github/workflows/third-party.yml
+++ b/.github/workflows/third-party.yml
@@ -492,16 +492,11 @@ jobs:
         with:
           path: pydantic-latest
 
-      # TODO: specifying a python-version to the action creates a venv,
-      # and there's currently no way to have the venv created in a subdir
-      # (see https://github.com/astral-sh/setup-uv/issues/251).
       - name: Install UV
         uses: astral-sh/setup-uv@v6
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+          working-directory: python
 
       - name: Install Semantic Kernel dependencies
         working-directory: ./python
